updated the openapispec to remove pointers fromm questions and responses
